[package]
name = "laravox"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "none"

[profile.dev]
debug = 0

[dependencies]
rune = { version = "0.14.0", features = ["cli", "fmt"] }
rune-modules = { version = "0.14.0", features = ["full"] }
anyhow = { version = "1.0.98" }
three-d = { version = "0.18.2", features = ["egui-gui"] }
three-d-asset = { version = "0.9.2", features = ["png"] }
rodio = { version = "0.20.1" }
fontdue = { version = "0.9.3" }
winit = { version = "0.28" }
gilrs = { version = "0.11.0" }
rfd = { version = "0.15.3" }
rapier2d = { version = "0.26.1", features = ["simd-stable", "debug-render"] }
notify = { version = "8.1.0" }
tokio = { version = "1.46.1", features = ["full"] }
koto = { git = "https://github.com/koto-lang/koto", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
