[package]
name    = "laravox"
version = "1.0.0"
edition = "2024"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = "none"

[profile.dev]
debug = 0

[dependencies]
mlua   = { version = "0.11.5", features = ["luajit", "vendored", "anyhow"] }
raylib = { version = "5.5.1" }