[package]
name    = "engine"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow 	      = { version = "1.0" }
mlua   	      = { version = "0.11.5", features = ["luajit", "vendored", "anyhow", "serde", "async"] }
raylib 	      = { version = "5.5.1",  features = ["with_serde"] }
mimalloc 	  = { version = "0.1.48", features = ["v3"]         }
serde  	      = { version = "1.0",    features = ["derive"]     }
serde_json    = { version = "1.0"    }
serde-value   = { version = "0.7.0"  }
rmp-serde     = { version = "1.3.1"  }
renet 		  = { version = "1.2.0"  }
renet_netcode = { version = "1.2.0"  }
rfd           = { version = "0.16.0" }
#smol          = { version = "2.0.2"  }
#smol-macros   = { version = "0.1.1"  }
#zip           = { version = "7.0.0"  }
engine_macro  = { path = "../engine_macro" }
